--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
   </noscript>
 
   <!-- Page Title -->
-  <title>Bootstrap 5 HTML Template</title>
+  <title>ANV_Resume</title>
 
 </head>
 <body class="">
@@ -108,7 +108,7 @@
                 <div class="col-12 col-md-7">
                     <div class="row g-5 g-xl-8">
                         <div class="col-12 col-xl-7" data-scroll data-scroll-speed="4" data-scroll-position="top">
-                            <p class="lead">I'm Jenny Smith, a freelance web developer and designer based in London, United Kingdom.</p>
+                            <p class="lead">I'm Alejandra Navarro Veliz, Master of Science in Evidence Based Social Intervention and Policy Evaluation based in Lima, Peru.</p>
                         
                             <p>I'm passionate about creating engaging and easy-to-navigate layouts. I love the look of clean lines, sharp contrasts in color schemes or bold graphic assets paired with sophisticated illustrations. 
                             
