--- a/about.html
+++ b/about.html
@@ -108,11 +108,11 @@
                 <div class="col-12 col-md-7">
                     <div class="row g-5 g-xl-8">
                         <div class="col-12 col-xl-7" data-scroll data-scroll-speed="4" data-scroll-position="top">
-                            <p class="lead">I'm Alejandra Navarro Veliz, Master of Science in Evidence Based Social Intervention and Policy Evaluation based in Lima, Peru.</p>
+                            <p class="lead">I'm Alejandra Navarro Veliz, Master of Science in Evidence Based Social Intervention and Policy Evaluation.</p>
                         
-                            <p>I'm passionate about creating engaging and easy-to-navigate layouts. I love the look of clean lines, sharp contrasts in color schemes or bold graphic assets paired with sophisticated illustrations. 
+                            <p> I'm a social researcher interested in evidence based public policies, implementation gaps and gender studies. Social research for better policies.
                             
-                            <p>As an Ecommerce developer my work is focused on web design; abstract forms make up most projects these days because they're so popular among consumers who want more control over their shopping experience than ever before.</p>
+                            <p> Graduated from the University of Oxford and currently based in Lima, I'm working on social interventions aimed at increasing access to higher education .</p>
                         </div>
                         <div class="col-12 col-xl-5" data-scroll data-scroll-speed="2" data-scroll-position="top">
                             <a href="#" class="btn btn-dark w-100 d-flex align-items-center justify-content-center"><i class="ri-file-download-line ri-lg me-2"></i> Download My CV</a>
