--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                 <!-- Profile Image-->
                 <div class="col-12 col-md-5" data-scroll data-scroll-speed="6" data-scroll-position="top">
                     <picture>
-                        <img class="img-fluid" src="./assets/images/avatar.jpg"
+                        <img class="img-fluid" src="./assets/images/photo.jpg"
                             alt="HTML Bootstrap Template by Pixel Rocket">
                     </picture>
                 </div>
