--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="mb-lg-10">
                     <p class="subtitle-sm" data-scroll data-scroll-speed="2" data-scroll-position="top">Hello there!</p>
                     <h1 class="display-1 mb-4" data-scroll data-scroll-speed="4" data-scroll-position="top">I am Alejandra Navarro</h1>
-                    <p data-scroll data-scroll-speed="6" data-scroll-position="top" class="lead typed-elem">MsC in Evidence Based Social Intervention and Policy Evaluation <span class="fw-bold text-highlight" data-typed='{"backSpeed": 50,"strings": ["frontend developer", "fullstack developer", "web designer", "UX designer"]}'></span><span class="d-block">specializing in evidence-informed social interventions</span></p>
+                    <p data-scroll data-scroll-speed="6" data-scroll-position="top" class="lead typed-elem"> I'm an enthusiastic <span class="fw-bold text-highlight" data-typed='{"backSpeed": 50,"strings": ["social researcher", "policy maker", "amateur sportperson"]}'></span><span class="d-block">specializing in evidence-informed social interventions</span></p>
                 </div>                <!-- /Hero-->
 
                 <!-- Latest Projects Slideshow Top-->
