--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <p class="fw-bolder">Access to HE Lead</p>
-                                        <p class="text-muted fw-light fs-6"> I Coordinated the team in charge of the development of social interventions aimed at increasing the access to higher education and TVET, in the context of the National Policy on Higher Education and TVET .</p>
+                                        <p class="text-muted fw-light fs-6"> I coordinated the team in charge of the development of social interventions aimed at increasing the access to higher education and TVET, in the context of the National Policy on Higher Education and TVET .</p>
                                     </div>
                                 </div>
                                 <!-- / Single Experience -->
@@ -151,7 +151,7 @@
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <p class="fw-bolder">Social analyst</p>
-                                        <p class="text-muted fw-light fs-6">•	Analysed and systematised academic articles, reports and working papers about mechanisms of transition from secondary education to higher education and TVET, as evidence for the development of the National Policy on Higher Education and TVET.</p>
+                                        <p class="text-muted fw-light fs-6"> I analysed and systematised academic articles, reports and working papers about mechanisms of transition from secondary education to higher education and TVET, as evidence for the development of the National Policy on Higher Education and TVET.</p>
                                     </div>
                                 </div>
                                 <!-- / Single Experience -->
@@ -167,7 +167,7 @@
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <p class="fw-bolder">Research Assistant</p>
-                                        <p class="text-muted fw-light fs-6">•	Headed the development of the National Education Policy for Rural Areas’ implementation plan, based on social research and funded by UNICEF.</p>
+                                        <p class="text-muted fw-light fs-6"> I headed the development of the National Education Policy for Rural Areas’ implementation plan, based on social research and funded by UNICEF.</p>
                                     </div>
                                 </div>
                                 <!-- / Single Experience -->
