--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                   <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./about.html">About</a>
+                  <a class="nav-link" href="./about.html">Publications</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./work-listing.html">Work</a>
