--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                   <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./about.html">About</a>
+                  <a class="nav-link" href="./about.html">Work</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./work-listing.html">Work</a>
+                  <a class="nav-link" href="./work-listing.html">Publications</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./contact.html">Contact</a>
@@ -115,6 +115,9 @@
                             alt="HTML Bootstrap Template by Pixel Rocket">
                     </picture>
                 </div>
+
+
+
               
                 <!-- / Profile Image-->
 
@@ -132,80 +135,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- / Bio & CV Link-->
-        
-                <!-- Experience-->
-                <div class="py-lg-6" data-scroll>
-                    <h2 
-                        class="display-6 border-bottom pb-5 mb-5 fade-in-up" 
-                        data-scroll data-scroll-position="bottom"
-                    >Experience</h2>                <!-- Single Experience-->
-                                <div 
-                                    class="row gx-2 mb-5 fade-in-up" 
-                                    data-scroll
-                                    data-scroll-position="bottom" 
-                                >
-                                    <div class="col-12 col-lg-4">
-                                        <p class="fw-bolder mb-1">National Programme of Scholarships and Educational Credit</p>
-                                        <span class="text-muted small">(2023 - present)</span>
-                                    </div>
-                                    <div class="col-12 col-lg-8">
-                                        <p class="fw-bolder">Evidence Management Coordinator</p>
-                                        <p class="text-muted fw-light fs-6">•	I currently coordinate the Evidence Management team at the Evaluation and Selection Unit, providing technical assistance for the formulation of government scholarships for undergraduate and graduate studies.</p>
-                                    </div>
-                                </div>
-                                <!-- / Single Experience -->
-                                <!-- Single Experience-->
-                                <div 
-                                    class="row gx-2 mb-5 fade-in-up" 
-                                    data-scroll
-                                    data-scroll-position="bottom" 
-                                >
-                                    <div class="col-12 col-lg-4">
-                                        <p class="fw-bolder mb-1">General Directorate of University Higher Education</p>
-                                        <span class="text-muted small">(2022 - 2023)</span>
-                                    </div>
-                                    <div class="col-12 col-lg-8">
-                                        <p class="fw-bolder">Access to HE Lead</p>
-                                        <p class="text-muted fw-light fs-6"> I coordinated the team in charge of the development of social interventions aimed at increasing the access to higher education and TVET, in the context of the National Policy on Higher Education and TVET .</p>
-                                    </div>
-                                </div>
-                                <!-- / Single Experience -->
-                                <!-- Single Experience-->
-                                <div 
-                                    class="row gx-2 mb-5 fade-in-up" 
-                                    data-scroll
-                                    data-scroll-position="bottom" 
-                                >
-                                    <div class="col-12 col-lg-4">
-                                        <p class="fw-bolder mb-1">General Directorate of University Higher Education</p>
-                                        <span class="text-muted small">(2019 - 2021)</span>
-                                    </div>
-                                    <div class="col-12 col-lg-8">
-                                        <p class="fw-bolder">Social analyst</p>
-                                        <p class="text-muted fw-light fs-6"> I analysed and systematised academic articles, reports and working papers about mechanisms of transition from secondary education to higher education and TVET, as evidence for the development of the National Policy on Higher Education and TVET.</p>
-                                    </div>
-                                </div>
-                                <!-- / Single Experience -->
-                                <!-- Single Experience-->
-                                <div 
-                                    class="row gx-2 mb-5 fade-in-up" 
-                                    data-scroll
-                                    data-scroll-position="bottom" 
-                                >
-                                    <div class="col-12 col-lg-4">
-                                        <p class="fw-bolder mb-1">ENACCION SAC </p>
-                                        <span class="text-muted small">(2018 - 2019)</span>
-                                    </div>
-                                    <div class="col-12 col-lg-8">
-                                        <p class="fw-bolder">Research Assistant</p>
-                                        <p class="text-muted fw-light fs-6"> I headed the development of the National Education Policy for Rural Areas’ implementation plan, based on social research and funded by UNICEF.</p>
-                                    </div>
-                                </div>
-                                <!-- / Single Experience -->
-                </div>                <!-- / Experience-->                
-
-            </div>
 
             <!-- /Page Content -->
         </section>
