--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
   </noscript>
 
   <!-- Page Title -->
-  <title>ANV_Resume</title>
+  <title>Bootstrap 5 HTML Template</title>
 
 </head>
 <body class="">
@@ -71,7 +71,7 @@
                   <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./about.html">Publications</a>
+                  <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./work-listing.html">Work</a>
@@ -98,7 +98,7 @@
                 <!-- Profile Image-->
                 <div class="col-12 col-md-5" data-scroll data-scroll-speed="6" data-scroll-position="top">
                     <picture>
-                        <img class="img-fluid" src="./assets/images/photo.jpg"
+                        <img class="img-fluid" src="./assets/images/avatar.jpg"
                             alt="HTML Bootstrap Template by Pixel Rocket">
                     </picture>
                 </div>
@@ -108,12 +108,20 @@
                 <div class="col-12 col-md-7">
                     <div class="row g-5 g-xl-8">
                         <div class="col-12 col-xl-7" data-scroll data-scroll-speed="4" data-scroll-position="top">
-                            <p class="lead">I'm Alejandra Navarro Veliz, Master of Science in Evidence Based Social Intervention and Policy Evaluation.</p>
+                            <p class="lead">I'm Jenny Smith, a freelance web developer and designer based in London, United Kingdom.</p>
                         
-                            <p> I'm a social researcher interested in evidence based public policies, implementation gaps and gender studies. Social research for better policies.
+                            <p>I'm passionate about creating engaging and easy-to-navigate layouts. I love the look of clean lines, sharp contrasts in color schemes or bold graphic assets paired with sophisticated illustrations. 
                             
-                            <p> Graduated from the University of Oxford and currently based in Lima, I'm working on social interventions aimed at increasing access to higher education .</p>
-                        </div>                                                                                                        
+                            <p>As an Ecommerce developer my work is focused on web design; abstract forms make up most projects these days because they're so popular among consumers who want more control over their shopping experience than ever before.</p>
+                        </div>
+                        <div class="col-12 col-xl-5" data-scroll data-scroll-speed="2" data-scroll-position="top">
+                            <a href="#" class="btn btn-dark w-100 d-flex align-items-center justify-content-center"><i class="ri-file-download-line ri-lg me-2"></i> Download My CV</a>
+                            <h5 class="fw-medium mt-6 mb-3">Find Me Online</h5>
+                            <ul class="list-unstyled">
+                                <li class="d-flex align-items-center mb-2"><i class="ri-github-line me-3 ri-lg"></i> <a class="link-body" href="#">Github</a></li>
+                                <li class="d-flex align-items-center mb-2"><i class="ri-facebook-line me-3 ri-lg"></i> <a class="link-body" href="#">Facebook</a></li>
+                                <li class="d-flex align-items-center mb-2"><i class="ri-twitter-line me-3 ri-lg"></i> <a class="link-body" href="#">Twitter</a></li>
+                                <li class="d-flex align-items-center mb-2"><i class="ri-codepen-line me-3 ri-lg"></i> <a class="link-body" href="#">Codepen</a></li>
                             </ul>
                         </div>
                     </div>
@@ -133,12 +141,13 @@
                                 data-scroll-position="bottom" 
                             >
                                 <div class="col-12 col-lg-4">
-                                    <p class="fw-bolder mb-1">National Programme of Scholarships and Educational Creditd</p>
-                                    <span class="text-muted small">(2023 - present)</span>
+                                    <p class="fw-bolder mb-1">NWD Designs Ltd</p>
+                                    <span class="text-muted small">(2020 - present)</span>
                                 </div>
                                 <div class="col-12 col-lg-8">
-                                    <p class="fw-bolder">Evidence Management Coordinator</p>
-                                    <p class="text-muted fw-light fs-6">•	I currently coordinate the Evidence Management team at the Evaluation and Selection Unit, providing technical assistance for the formulation of government scholarships for undergraduate and graduate studies.</p>
+                                    <p class="fw-bolder">Technical Lead</p>
+                                    <p class="text-muted fw-light fs-6">After two years of working in London, I joined the NWD Designs team. Our design group works with clients including Motorola and Nokia who are just some examples; Apple stands out among all others because it had such an impactful brand identity for decades until they rebranded recently.</p>
+                                    <a class="link-body" href="#">https://www.nwd.co.uk</a>
                                 </div>
                             </div>
                             <!-- / Single Experience -->
@@ -166,12 +175,13 @@
                                 data-scroll-position="bottom" 
                             >
                                 <div class="col-12 col-lg-4">
-                                    <p class="fw-bolder mb-1">General Directorate of University Higher Education</p>
-                                    <span class="text-muted small">(2022 - 2023)</span>
+                                    <p class="fw-bolder mb-1">Super 8</p>
+                                    <span class="text-muted small">(2016 - 2018)</span>
                                 </div>
                                 <div class="col-12 col-lg-8">
-                                    <p class="fw-bolder">Social Specialist</p>
-                                    <p class="text-muted fw-light fs-6">I coordinated the team in charge of the development of social interventions aimed at increasing the access to higher education and TVET, in the context of the National Policy on Higher Education and TVET.</p>
+                                    <p class="fw-bolder">Senior Developer</p>
+                                    <p class="text-muted fw-light fs-6">I have always loved the idea of being in charge of a design team, so I joined Super 8 as a lead designer where we worked on amazing campaigns including the branding and advert assets for Facebook&#x27;s VR arm.</p>
+                                    <a class="link-body" href="#">https://www.supereight.co.uk</a>
                                 </div>
                             </div>
                             <!-- / Single Experience -->
@@ -182,12 +192,13 @@
                                 data-scroll-position="bottom" 
                             >
                                 <div class="col-12 col-lg-4">
-                                    <p class="fw-bolder mb-1">General Directorate of University Higher Educationy</p>
-                                    <span class="text-muted small">(2019 - 2021)</span>
+                                    <p class="fw-bolder mb-1">Cube Agency</p>
+                                    <span class="text-muted small">(2014 - 2016)</span>
                                 </div>
                                 <div class="col-12 col-lg-8">
-                                    <p class="fw-bolder">Analyst</p>
-                                    <p class="text-muted fw-light fs-6">•	Analysed and systematised academic articles, reports and working papers about mechanisms of transition from secondary education to higher education and TVET, as evidence for the development of the National Policy on Higher Education and TVET.</p>
+                                    <p class="fw-bolder">Graphic Designer</p>
+                                    <p class="text-muted fw-light fs-6">After finishing my degree in Graphic Design, I joined Cube agency in London in 2014 and worked on projects for companies such as Nestle, Spotify and Red Cabbage.</p>
+                                    <a class="link-body" href="#">https://www.cubeagency.co.uk</a>
                                 </div>
                             </div>
                             <!-- / Single Experience -->
