--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </noscript>
 
   <!-- Page Title -->
-  <title>Bootstrap 5 HTML Template</title>
+  <title>ANV Resume</title>
 
 </head>
 <body class="">
@@ -55,10 +55,10 @@
           <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center fade-in" href="./index.html" data-scroll>
               <picture class="avatar me-3" data-scroll data-scroll-speed="10" data-scroll-direction="horizontal" data-scroll-position="top">
-                <img class="img-fluid rounded-circle" src="./assets/images/avatar-small.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                <img class="img-fluid rounded-circle" src="./assets/images/photo.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
               </picture>
               <span class="fw-bolder fs-6 d-flex justify-content-start" data-scroll-section>
-                <span class="fade-in" data-scroll data-scroll-speed="2" data-scroll-delay=".03" data-scroll-position="top">Jenny Smith</span>
+                <span class="fade-in" data-scroll data-scroll-speed="2" data-scroll-delay=".03" data-scroll-position="top">Alejandra Navarro</span>
               </span>
             </a>
             <button class="btn-icon navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -74,7 +74,7 @@
                   <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./work-listing.html">Work</a>
+                  <a class="nav-link" href="./work-listing.html">Work and Publications</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./contact.html">Contact</a>
@@ -97,8 +97,8 @@
                 <!-- Hero-->
                 <div class="mb-lg-10">
                     <p class="subtitle-sm" data-scroll data-scroll-speed="2" data-scroll-position="top">Hello there!</p>
-                    <h1 class="display-1 mb-4" data-scroll data-scroll-speed="4" data-scroll-position="top">I am Jenny Smith</h1>
-                    <p data-scroll data-scroll-speed="6" data-scroll-position="top" class="lead typed-elem">London-based freelance <span class="fw-bold text-highlight" data-typed='{"backSpeed": 50,"strings": ["frontend developer", "fullstack developer", "web designer", "UX designer"]}'></span><span class="d-block">specializing in Magento, Wordpress & Shopify development</span></p>
+                    <h1 class="display-1 mb-4" data-scroll data-scroll-speed="4" data-scroll-position="top">I'm Alejandra Navarro</h1>
+                    <p data-scroll data-scroll-speed="6" data-scroll-position="top" class="lead typed-elem"> I'm an enthusiastic <span class="fw-bold text-highlight" data-typed='{"backSpeed": 50,"strings": ["social researcher", "policy maker", "amateur sportperson"]}'></span><span class="d-block">specialised in evidence-informed decision making</span></p>
                 </div>                <!-- /Hero-->
 
                 <!-- Latest Projects Slideshow Top-->
