--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./work-listing.html">Work and Publications</a>
+                  <a class="nav-link" href="./work-listing.html">Work</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./contact.html">Contact</a>
@@ -106,7 +106,7 @@
                     <h2 
                         class="display-6 border-bottom pb-5 mb-5 fade-in-up" 
                         data-scroll data-scroll-position="bottom"
-                    >Selected Work</h2>                    <div class="position-relative">
+                    >Main publications</h2>                    <div class="position-relative">
                         <div class="swiper-container swiper-linked-top">
                           <div class="swiper-wrapper">
                                     <div class="swiper-slide cursor-pointer">
