--- a/index.html
+++ b/index.html
@@ -111,43 +111,38 @@
                           <div class="swiper-wrapper">
                                     <div class="swiper-slide cursor-pointer">
                                         <picture>
-                                            <img class="img-fluid" src="./assets/images/project-listing-1.jpg" alt="">
+                                            <img class="img-fluid" src="./assets/images/dspi.png" alt="">
                                         </picture>
                                     </div>
                                     <div class="swiper-slide cursor-pointer">
                                         <picture>
-                                            <img class="img-fluid" src="./assets/images/project-listing-2.jpg" alt="">
+                                            <img class="img-fluid" src="./assets/images/enaeesu2019.png" alt="">
                                         </picture>
                                     </div>
                                     <div class="swiper-slide cursor-pointer">
                                         <picture>
-                                            <img class="img-fluid" src="./assets/images/project-listing-3.jpg" alt="">
+                                            <img class="img-fluid" src="./assets/images/reporte_interrupcion.png" alt="">
                                         </picture>
                                     </div>
                                     <div class="swiper-slide cursor-pointer">
                                         <picture>
-                                            <img class="img-fluid" src="./assets/images/project-listing-4.jpg" alt="">
+                                            <img class="img-fluid" src="./assets/images/La política del multilinguismo en dos regiones con mayorías quechua hablantes.pdf.jpg" alt="">
                                         </picture>
                                     </div>
                                     <div class="swiper-slide cursor-pointer">
                                         <picture>
-                                            <img class="img-fluid" src="./assets/images/project-listing-5.jpg" alt="">
+                                            <img class="img-fluid" src="./assets/images/equality.jpg" alt="">
                                         </picture>
                                     </div>
                                     <div class="swiper-slide cursor-pointer">
                                         <picture>
-                                            <img class="img-fluid" src="./assets/images/project-listing-6.jpg" alt="">
+                                            <img class="img-fluid" src="./assets/images/politiai.jpeg" alt="">
                                         </picture>
                                     </div>
                                     <div class="swiper-slide cursor-pointer">
                                         <picture>
-                                            <img class="img-fluid" src="./assets/images/project-listing-7.jpg" alt="">
-                                        </picture>
-                                    </div>
-                                    <div class="swiper-slide cursor-pointer">
-                                        <picture>
-                                            <img class="img-fluid" src="./assets/images/project-listing-8.jpg" alt="">
-                                        </picture>
+                                            <img class="img-fluid" src="./assets/images/politiai.jpeg" alt="">
+                                        </picture>                        
                                     </div>
                           </div>
                         </div>
