--- a/index.html
+++ b/index.html
@@ -161,18 +161,18 @@
                                     <!-- Slide Image-->
                                     <div class="col-12 col-md-6" data-swiper-parallax-x="-100">
                                       <picture>
-                                        <img class="img-fluid" src="./assets/images/project-listing-1.jpg" alt="">
+                                        <img class="img-fluid" src="./assets/images/dspi.png" alt="">
                                     </picture>
                                     </div>
                                     <!-- / Slide Image -->
                     
                                     <!-- Slide Text-->
                                     <div class="col-12 col-md-6">
-                                      <p class="subtitle-xs mb-0 mt-4 mt-md-0" data-swiper-parallax-x="-100"><span class='me-2'>Ecommerce</span> &middot; <span class='ms-2'>Shopify</span></p>
-                                      <p class="fw-bolder lead mb-3 mt-2" data-swiper-parallax-x="-150">Shopify Fashion Store</p>
-                                      <p class="small text-muted mb-2" data-swiper-parallax-x="-200">Design and development of a custom Shopify Ecommerce platform for a fashion retailer.</p>
+                                      <p class="subtitle-xs mb-0 mt-4 mt-md-0" data-swiper-parallax-x="-100"><span class='me-2'>Evidence Based Social Intervention</span> &middot; <span class='ms-2'>Peru</span></p>
+                                      <p class="fw-bolder lead mb-3 mt-2" data-swiper-parallax-x="-150">The best evidence available? An analysis of the adoption of evidence-based policymaking in education in Peru </p>
+                                      <p class="small text-muted mb-2" data-swiper-parallax-x="-200"> My Master's dissertation was about the use of the evidence based decision making approach in education policies in Peru.</p>
                                       <div class="mt-3" data-swiper-parallax-y="-15">
-                                        <a class="link-body" href="./work-single.html">View Project</a>
+                                        <p class="small text-muted mb-2" data-swiper-parallax-x="-200">Document not available online</p>
                                       </div>
                                     </div>
                                     <!-- / Slide Text-->
