--- a/index.html
+++ b/index.html
@@ -184,18 +184,18 @@
                                     <!-- Slide Image-->
                                     <div class="col-12 col-md-6" data-swiper-parallax-x="-100">
                                       <picture>
-                                        <img class="img-fluid" src="./assets/images/project-listing-2.jpg" alt="">
+                                        <img class="img-fluid" src="./assets/images/enaeesu2019.png" alt="">
                                     </picture>
                                     </div>
                                     <!-- / Slide Image -->
                     
                                     <!-- Slide Text-->
                                     <div class="col-12 col-md-6">
-                                      <p class="subtitle-xs mb-0 mt-4 mt-md-0" data-swiper-parallax-x="-100"><span class='me-2'>Ecommerce</span> &middot; <span class='ms-2'>Magento</span></p>
-                                      <p class="fw-bolder lead mb-3 mt-2" data-swiper-parallax-x="-150">Magento Furniture Store</p>
-                                      <p class="small text-muted mb-2" data-swiper-parallax-x="-200">Design and development of a custom Magento Ecommerce platform for a furniture retailer.</p>
+                                      <p class="subtitle-xs mb-0 mt-4 mt-md-0" data-swiper-parallax-x="-100"><span class='me-2'>Higher Education</span> &middot; <span class='ms-2'>Universities</span></p>
+                                      <p class="fw-bolder lead mb-3 mt-2" data-swiper-parallax-x="-150">National Survey on University Students: Main results</p>
+                                      <p class="small text-muted mb-2" data-swiper-parallax-x="-200"> A publication about the main characteristics of university higher education in Peru.</p>
                                       <div class="mt-3" data-swiper-parallax-y="-15">
-                                        <a class="link-body" href="./work-single.html">View Project</a>
+                                        <a class="link-body" href="https://repositorio.minedu.gob.pe/handle/20.500.12799/7745">View</a>
                                       </div>
                                     </div>
                                     <!-- / Slide Text-->
