--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
                                     <!-- Slide Text-->
                                     <div class="col-12 col-md-6">
                                       <p class="subtitle-xs mb-0 mt-4 mt-md-0" data-swiper-parallax-x="-100"><span class='me-2'>Gender Studies</span> &middot; <span class='ms-2'>Political Participation</span></p>
-                                      <p class="fw-bolder lead mb-3 mt-2" data-swiper-parallax-x="-150">Identity in transition: Gender relations in the counsils of Jauja and Huancayo between 2011 and 2014</p>
-                                      <p class="small text-muted mb-2" data-swiper-parallax-x="-200">I wrote this article related to gender relations between municipal counselors from a gender in political science approach.</p>
+                                      <p class="fw-bolder lead mb-3 mt-2" data-swiper-parallax-x="-150">Identity in transition: Gender relations in the councils of Jauja and Huancayo between 2011 and 2014</p>
+                                      <p class="small text-muted mb-2" data-swiper-parallax-x="-200">I wrote this article related to gender relations between municipal councilors from a gender in political science approach.</p>
                                       <div class="mt-3" data-swiper-parallax-y="-15">
                                         <a class="link-body" href="https://revistas.pucp.edu.pe/index.php/politai/article/view/25232">View</a>
                                       </div>
