--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <p class="fw-bolder">Research Assistant</p>
-                                        <p class="text-muted fw-light fs-6">"> I headed the development of the National Education Policy for Rural Areas’ implementation plan, based on social research and funded by UNICEF.</p>
+                                        <p class="text-muted fw-light fs-6">I headed the development of the National Education Policy for Rural Areas’ implementation plan, based on social research and funded by UNICEF.</p>
                                     </div>
                                 </div>
                                 <!-- / Single Experience -->
