--- a/about.html
+++ b/about.html
@@ -129,80 +129,76 @@
                 <!-- / Bio & CV Link-->
             </div>
 
-            <!-- Experience-->
-            <div class="py-lg-6" data-scroll>
-                <h2 
-                    class="display-6 border-bottom pb-5 mb-5 fade-in-up" 
-                    data-scroll data-scroll-position="bottom"
-                >Experience</h2>                <!-- Single Experience-->
-                            <div 
-                                class="row gx-2 mb-5 fade-in-up" 
-                                data-scroll
-                                data-scroll-position="bottom" 
-                            >
-                                <div class="col-12 col-lg-4">
-                                    <p class="fw-bolder mb-1">NWD Designs Ltd</p>
-                                    <span class="text-muted small">(2020 - present)</span>
+             <!-- Experience-->
+                <div class="py-lg-6" data-scroll>
+                    <h2 
+                        class="display-6 border-bottom pb-5 mb-5 fade-in-up" 
+                        data-scroll data-scroll-position="bottom"
+                    >Experience</h2>                <!-- Single Experience-->
+                                <div 
+                                    class="row gx-2 mb-5 fade-in-up" 
+                                    data-scroll
+                                    data-scroll-position="bottom" 
+                                >
+                                    <div class="col-12 col-lg-4">
+                                        <p class="fw-bolder mb-1">National Programme of Scholarships and Educational Creditd</p>
+                                        <span class="text-muted small">(2023 - present)</span>
+                                    </div>
+                                    <div class="col-12 col-lg-8">
+                                        <p class="fw-bolder">Evidence Management Coordinator</p>
+                                        <p class="text-muted fw-light fs-6">AI currently coordinate the Evidence Management team at the Evaluation and Selection Unit, providing technical assistance for the formulation of government scholarships for undergraduate and graduate studies.</p>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-lg-8">
-                                    <p class="fw-bolder">Technical Lead</p>
-                                    <p class="text-muted fw-light fs-6">After two years of working in London, I joined the NWD Designs team. Our design group works with clients including Motorola and Nokia who are just some examples; Apple stands out among all others because it had such an impactful brand identity for decades until they rebranded recently.</p>
-                                    <a class="link-body" href="#">https://www.nwd.co.uk</a>
+                                <!-- / Single Experience -->
+                                <!-- Single Experience-->
+                                <div 
+                                    class="row gx-2 mb-5 fade-in-up" 
+                                    data-scroll
+                                    data-scroll-position="bottom" 
+                                >
+                                    <div class="col-12 col-lg-4">
+                                        <p class="fw-bolder mb-1">General Directorate of University Higher Education</p>
+                                        <span class="text-muted small">(2018 - 2020)</span>
+                                    </div>
+                                    <div class="col-12 col-lg-8">
+                                        <p class="fw-bolder">Access to HE Lead</p>
+                                        <p class="text-muted fw-light fs-6">I coordinated the team in charge of the development of social interventions aimed at increasing the access to higher education and TVET, in the context of the National Policy on Higher Education and TVET.</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- / Single Experience -->
-                            <!-- Single Experience-->
-                            <div 
-                                class="row gx-2 mb-5 fade-in-up" 
-                                data-scroll
-                                data-scroll-position="bottom" 
-                            >
-                                <div class="col-12 col-lg-4">
-                                    <p class="fw-bolder mb-1">Pinnacle Designs</p>
-                                    <span class="text-muted small">(2018 - 2020)</span>
+                                <!-- / Single Experience -->
+                                <!-- Single Experience-->
+                                <div 
+                                    class="row gx-2 mb-5 fade-in-up" 
+                                    data-scroll
+                                    data-scroll-position="bottom" 
+                                >
+                                    <div class="col-12 col-lg-4">
+                                        <p class="fw-bolder mb-1">General Directorate of University Higher Education</p>
+                                        <span class="text-muted small">(2019 - 2021)</span>
+                                    </div>
+                                    <div class="col-12 col-lg-8">
+                                        <p class="fw-bolder">Social analyst</p>
+                                        <p class="text-muted fw-light fs-6">I analysed and systematised academic articles, reports and working papers about mechanisms of transition from secondary education to higher education and TVET, as evidence for the development of the National Policy on Higher Education and TVET.</p>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-lg-8">
-                                    <p class="fw-bolder">Lead Developer</p>
-                                    <p class="text-muted fw-light fs-6">Looking for a new challenge, I joined Pinnacle Designs. My role focused on helping our customers define their strategic branding needs and requirements to achieve an elegant end result that stands out among competitors&#x27; work.</p>
-                                    <a class="link-body" href="#">https://www.pinnacle-designs.co.uk</a>
+                                <!-- / Single Experience -->
+                                <!-- Single Experience-->
+                                <div 
+                                    class="row gx-2 mb-5 fade-in-up" 
+                                    data-scroll
+                                    data-scroll-position="bottom" 
+                                >
+                                    <div class="col-12 col-lg-4">
+                                        <p class="fw-bolder mb-1">ENACCION SAC</p>
+                                        <span class="text-muted small">(2018 - 2019)</span>
+                                    </div>
+                                    <div class="col-12 col-lg-8">
+                                        <p class="fw-bolder">Research Assistant</p>
+                                        <p class="text-muted fw-light fs-6">I headed the development of the National Education Policy for Rural Areas’ implementation plan, based on social research and funded by UNICEF.</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- / Single Experience -->
-                            <!-- Single Experience-->
-                            <div 
-                                class="row gx-2 mb-5 fade-in-up" 
-                                data-scroll
-                                data-scroll-position="bottom" 
-                            >
-                                <div class="col-12 col-lg-4">
-                                    <p class="fw-bolder mb-1">Super 8</p>
-                                    <span class="text-muted small">(2016 - 2018)</span>
-                                </div>
-                                <div class="col-12 col-lg-8">
-                                    <p class="fw-bolder">Senior Developer</p>
-                                    <p class="text-muted fw-light fs-6">I have always loved the idea of being in charge of a design team, so I joined Super 8 as a lead designer where we worked on amazing campaigns including the branding and advert assets for Facebook&#x27;s VR arm.</p>
-                                    <a class="link-body" href="#">https://www.supereight.co.uk</a>
-                                </div>
-                            </div>
-                            <!-- / Single Experience -->
-                            <!-- Single Experience-->
-                            <div 
-                                class="row gx-2 mb-5 fade-in-up" 
-                                data-scroll
-                                data-scroll-position="bottom" 
-                            >
-                                <div class="col-12 col-lg-4">
-                                    <p class="fw-bolder mb-1">Cube Agency</p>
-                                    <span class="text-muted small">(2014 - 2016)</span>
-                                </div>
-                                <div class="col-12 col-lg-8">
-                                    <p class="fw-bolder">Graphic Designer</p>
-                                    <p class="text-muted fw-light fs-6">After finishing my degree in Graphic Design, I joined Cube agency in London in 2014 and worked on projects for companies such as Nestle, Spotify and Red Cabbage.</p>
-                                    <a class="link-body" href="#">https://www.cubeagency.co.uk</a>
-                                </div>
-                            </div>
-                            <!-- / Single Experience -->
-            </div>            <!-- / Experience-->
+                                <!-- / Single Experience -->
+                </div>                <!-- / Experience-->        
 
             <!-- / Skills-->
             <!-- Skills Section-->
