--- a/about.html
+++ b/about.html
@@ -112,16 +112,18 @@
                         
                             <p>I'm I'm a social researcher interested in evidence based public policies, implementation gaps, education, inequalities and gender studies. Social research for better policies.
                             
-                            <p>Graduated from the University of Oxford and currentle bases in Lima, I'm working in initiatives aimed at increasing access to higher education.</p>
+                            <p>Graduated from the University of Oxford and currently based in Lima, I'm working in initiatives aimed at increasing access to higher education.</p>
                         </div>
                         <div class="col-12 col-xl-5" data-scroll data-scroll-speed="2" data-scroll-position="top">
-                            <a href="#" class="btn btn-dark w-100 d-flex align-items-center justify-content-center"><i class="ri-file-download-line ri-lg me-2"></i> Download My CV</a>
+                            <a href="./assets/CV_ANV_english version 23.07.24.pdf" class="btn btn-dark w-100 d-flex align-items-center justify-content-center"><i class="ri-file-download-line ri-lg me-2"></i> Download My CV</a>
                             <h5 class="fw-medium mt-6 mb-3">Find Me Online</h5>
                             <ul class="list-unstyled">
-                                <li class="d-flex align-items-center mb-2"><i class="ri-github-line me-3 ri-lg"></i> <a class="link-body" href="#">Github</a></li>
-                                <li class="d-flex align-items-center mb-2"><i class="ri-facebook-line me-3 ri-lg"></i> <a class="link-body" href="#">Facebook</a></li>
-                                <li class="d-flex align-items-center mb-2"><i class="ri-twitter-line me-3 ri-lg"></i> <a class="link-body" href="#">Twitter</a></li>
-                                <li class="d-flex align-items-center mb-2"><i class="ri-codepen-line me-3 ri-lg"></i> <a class="link-body" href="#">Codepen</a></li>
+                                <li class="d-flex align-items-center mb-2"><i class="ri-github-line me-3 ri-lg"></i> <a class="link-body" href="https://github.com/AlejandraNavarroV">Github</a></li>
+                  <li class="d-flex align-items-center mb-2">
+  <i class="ri-linkedin-box-line me-3 ri-lg"></i>
+  <a class="link-body" href="https://www.linkedin.com/in/alejandra-nora-navarro-v%C3%A9liz-66a6924b/" target="_blank">LinkedIn</a>
+</li>
+
                             </ul>
                         </div>
                     </div>
