--- a/about.html
+++ b/about.html
@@ -258,14 +258,14 @@
                             >
                                 <div class="row align-items-center">
                                     <div class="col-12 d-flex justify-content-end">
-                                        <p class="mb-0 fw-bolder">40%</p>
+                                        <p class="mb-0 fw-bolder">85%</p>
                                     </div>
                                     <div class="col-4">
-                                        <p class="mb-0 small lh-1">GitHub</p>
+                                        <p class="mb-0 small lh-1">Evidence based design</p>
                                     </div>
                                     <div class="col-8">
                                         <div class="progress f-h-1">
-                                            <div class="progress-bar" role="progressbar" style="width: 40%"
+                                            <div class="progress-bar" role="progressbar" style="width: 85%"
                                                 aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
@@ -282,7 +282,7 @@
                                         <p class="mb-0 fw-bolder">90%</p>
                                     </div>
                                     <div class="col-4">
-                                        <p class="mb-0 small lh-1">Microsoft environment</p>
+                                        <p class="mb-0 small lh-1">Policy analysis</p>
                                     </div>
                                     <div class="col-8">
                                         <div class="progress f-h-1">
