--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                         <div class="col-12 col-xl-7" data-scroll data-scroll-speed="4" data-scroll-position="top">
                             <p class="lead">I'm Alejandra Navarro, and I'm engaged with impactful social interventions.</p>
                         
-                            <p>I'm I'm a social researcher interested in evidence based public policies, implementation gaps, education, inequalities and gender studies. Social research for better policies.
+                            <p>I'm a social researcher interested in evidence based public policies, implementation gaps, education, inequalities and gender studies. Social research for better policies.
                             
                             <p>Graduated from the University of Oxford and currently based in Lima, I'm working in initiatives aimed at increasing access to higher education.</p>
                         </div>
