--- a/work-listing.html
+++ b/work-listing.html
@@ -92,7 +92,7 @@
         <section class="container py-3 " data-scroll-section>
             <!-- Page Content Goes Here -->
 
-            <h1 class="display-3 mb-5"  data-scroll data-scroll-speed="6" data-scroll-position="top">Educationk</h1>
+            <h1 class="display-3 mb-5"  data-scroll data-scroll-speed="6" data-scroll-position="top">Education</h1>
 
             <div class="row g-8" data-scroll
             data-scroll-position="bottom" >
@@ -117,15 +117,10 @@
                         class="col-12 col-md-6 fade-in-right"
                     >
                         <div class="position-relative">
-                            <a class="link-cover" href="./work-single.html">
-                                <picture>
-                                    <img class="img-fluid" src="./assets/images/project-listing-2.jpg" alt="">
-                                </picture>
-                            </a>
-                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Ecommerce</span> &middot; <span class='ms-2'>Magento</span></p>
-                            <p class="fw-bolder lead mb-3 mt-2">Magento Furniture Store</p>
-                            <p class="small text-muted mb-2">Design and development of a custom Magento Ecommerce platform for a furniture retailer.</p>
-                            <a class="link-body" href="./work-single.html">View Project</a>
+                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Social Sciences> &middot; <span class='ms-2'>Political Scienceo</span></p>
+                            <p class="fw-bolder lead mb-3 mt-2"> Bachelor's Degree in Political Science and Government</p>
+                            <p class="small text-muted mb-2"> I did my undergraduate studies at the Pontifical Catholic University of Peru (PUCP). Graduated at the top 5.84% of all-time students.</p>
+                            <a class="link-body" href="https://www.pucp.edu.pe/carrera/ciencia-politica-y-gobierno/">View Institution</a>
                         </div>
                     </div>
                     <!-- / Single Work -->
@@ -136,15 +131,10 @@
                         class="col-12 col-md-6 fade-in-left"
                     >
                         <div class="position-relative">
-                            <a class="link-cover" href="./work-single.html">
-                                <picture>
-                                    <img class="img-fluid" src="./assets/images/project-listing-3.jpg" alt="">
-                                </picture>
-                            </a>
-                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Ecommerce</span> &middot; <span class='ms-2'>Wordpress</span></p>
-                            <p class="fw-bolder lead mb-3 mt-2">Wordpress Grocery Store</p>
-                            <p class="small text-muted mb-2">Design and development of a WooCommerce Ecommerce platform for a grocery platform.</p>
-                            <a class="link-body" href="./work-single.html">View Project</a>
+                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Social Sciences</span> &middot; <span class='ms-2'>Data Science</span></p>
+                            <p class="fw-bolder lead mb-3 mt-2">Specialization in Data Science for Social Sciences and Public Management</p>
+                            <p class="small text-muted mb-2">I currently study a specialization in Data Science at the Q-LAB PUCP.</p>
+                            <a class="link-body" href="https://qlab.pucp.edu.pe/">View Institution</a>
                         </div>
                     </div>
                     <!-- / Single Work -->
@@ -155,94 +145,13 @@
                         class="col-12 col-md-6 fade-in-right"
                     >
                         <div class="position-relative">
-                            <a class="link-cover" href="./work-single.html">
-                                <picture>
-                                    <img class="img-fluid" src="./assets/images/project-listing-4.jpg" alt="">
-                                </picture>
-                            </a>
-                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Mobile</span> &middot; <span class='ms-2'>React Native</span></p>
-                            <p class="fw-bolder lead mb-3 mt-2">Messaging App</p>
-                            <p class="small text-muted mb-2">Creation of a custom React Native messaging app for a messaging SAAS startup.</p>
-                            <a class="link-body" href="./work-single.html">View Project</a>
+                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>English</span> &middot; <span class='ms-2'>Francais</span></p>
+                            <p class="fw-bolder lead mb-3 mt-2">IELTS/DELF B2</p>
+                            <p class="small text-muted mb-2">I have full proficiency in both languages.</p>
                         </div>
                     </div>
                     <!-- / Single Work -->
-                    <!-- Single Work-->
-                    <div 
-                    data-scroll
-                    data-scroll-position="bottom" 
-                        class="col-12 col-md-6 fade-in-left"
-                    >
-                        <div class="position-relative">
-                            <a class="link-cover" href="./work-single.html">
-                                <picture>
-                                    <img class="img-fluid" src="./assets/images/project-listing-5.jpg" alt="">
-                                </picture>
-                            </a>
-                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Ecommerce</span> &middot; <span class='ms-2'>Shopify</span></p>
-                            <p class="fw-bolder lead mb-3 mt-2">Shopify Online Store</p>
-                            <p class="small text-muted mb-2">Design and development of a custom Shopify Ecommerce platform for a car retailer.</p>
-                            <a class="link-body" href="./work-single.html">View Project</a>
-                        </div>
-                    </div>
-                    <!-- / Single Work -->
-                    <!-- Single Work-->
-                    <div 
-                    data-scroll
-                    data-scroll-position="bottom" 
-                        class="col-12 col-md-6 fade-in-right"
-                    >
-                        <div class="position-relative">
-                            <a class="link-cover" href="./work-single.html">
-                                <picture>
-                                    <img class="img-fluid" src="./assets/images/project-listing-6.jpg" alt="">
-                                </picture>
-                            </a>
-                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Ecommerce</span> &middot; <span class='ms-2'>Magento</span></p>
-                            <p class="fw-bolder lead mb-3 mt-2">Magento Online Store</p>
-                            <p class="small text-muted mb-2">Design and development of a custom Magento Ecommerce platform for a pet food retailer.</p>
-                            <a class="link-body" href="./work-single.html">View Project</a>
-                        </div>
-                    </div>
-                    <!-- / Single Work -->
-                    <!-- Single Work-->
-                    <div 
-                    data-scroll
-                    data-scroll-position="bottom" 
-                        class="col-12 col-md-6 fade-in-left"
-                    >
-                        <div class="position-relative">
-                            <a class="link-cover" href="./work-single.html">
-                                <picture>
-                                    <img class="img-fluid" src="./assets/images/project-listing-7.jpg" alt="">
-                                </picture>
-                            </a>
-                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Ecommerce</span> &middot; <span class='ms-2'>Wordpress</span></p>
-                            <p class="fw-bolder lead mb-3 mt-2">Web Application</p>
-                            <p class="small text-muted mb-2">Design and development of a custom WooCommerce Ecommerce platform for a furniture retailer.</p>
-                            <a class="link-body" href="./work-single.html">View Project</a>
-                        </div>
-                    </div>
-                    <!-- / Single Work -->
-                    <!-- Single Work-->
-                    <div 
-                    data-scroll
-                    data-scroll-position="bottom" 
-                        class="col-12 col-md-6 fade-in-right"
-                    >
-                        <div class="position-relative">
-                            <a class="link-cover" href="./work-single.html">
-                                <picture>
-                                    <img class="img-fluid" src="./assets/images/project-listing-8.jpg" alt="">
-                                </picture>
-                            </a>
-                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Ecommerce</span> &middot; <span class='ms-2'>Shopify</span></p>
-                            <p class="fw-bolder lead mb-3 mt-2">Ecommerce Marketing</p>
-                            <p class="small text-muted mb-2">Design and development of a custom Shopify Ecommerce platform for a fashion retailer.</p>
-                            <a class="link-body" href="./work-single.html">View Project</a>
-                        </div>
-                    </div>
-                    <!-- / Single Work -->
+              
             </div>
 
             <!-- /Page Content -->
@@ -251,10 +160,6 @@
 
         <!-- Footer -->
         <!-- Footer-->
-        <div class="d-flex align-items-center justify-content-center flex-column col-lg-7 col-xl-6 col-xxl-5 text-center mx-auto mt-5 px-4 px-md-0 mt-lg-10" data-scroll-section>
-            <h4 class="display-5 mb-5" data-scroll data-scroll-speed=".8" data-scroll-delay="0.05">Ready to discuss your project requirements?</h4>
-            <a href="./contact.html" class="btn btn-primary">Get In Touch</a>
-        </div>
         
         <footer class="border-top mt-10 pt-5 pb-8  " data-scroll-section>
         <div class="container d-flex justify-content-between">
