--- a/work-listing.html
+++ b/work-listing.html
@@ -117,7 +117,7 @@
                         class="col-12 col-md-6 fade-in-right"
                     >
                         <div class="position-relative">
-                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Social Sciences> &middot; <span class='ms-2'>Political Scienceo</span></p>
+                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Social Sciences> &middot; <span class='ms-2'>Political Science</span></p>
                             <p class="fw-bolder lead mb-3 mt-2"> Bachelor's Degree in Political Science and Government</p>
                             <p class="small text-muted mb-2"> I did my undergraduate studies at the Pontifical Catholic University of Peru (PUCP). Graduated at the top 5.84% of all-time students.</p>
                             <a class="link-body" href="https://www.pucp.edu.pe/carrera/ciencia-politica-y-gobierno/">View Institution</a>
